HelloUltraviolet/Fixtures/RejectedSource/Polymorphism/GenericTypeApplyArgCount/Expected.uv
//! Expected diagnostic metadata for the GenericTypeApplyArgCount rejected-source specimen.

expectedDiagnostic("E-TYP-2303", "rule.14.WF-Apply-ArgCount-Err")
